Fix sticky header on mobile individual view.

--- a/css/grid.css
+++ b/css/grid.css
@@ -40,12 +40,10 @@
   grid-row-gap: var(--grid-row-gap);
   margin: 0 auto;
   padding: var(--grid-top-spacing) var(--page-padding) var(--grid-bottom-spacing);
+  width: max-content;
+  min-width: 100%;
   height: 100%; /* Use % on mobile instead of vh because of differing behavior in combination with browser ui */
   transition: padding var(--micro-interaction-animation-duration) ease-in-out;
-
-  [data-visible-view*="previews"] & {
-    width: max-content;
-  }
 
   [data-visible-view*="individual"] & {
     grid-template-rows: min-content 1fr;
